fix overflow

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,6 @@
   text-transform: lowercase;
 }
 
-body {
+.App {
   overflow-x: hidden;
 }
